[gd_scene load_steps=17 format=3 uid="uid://dt5vvk4xtscnt"]

[ext_resource type="Script" uid="uid://b4s8x8q3x0fac" path="res://scripts/enemy.gd" id="1_8dv88"]
[ext_resource type="PackedScene" uid="uid://dmic18251tdqn" path="res://scenes/killzone.tscn" id="2_jvvar"]
[ext_resource type="Shader" uid="uid://ce3p6nkjvphw6" path="res://shaders/damageFlash.gdshader" id="2_ri85n"]
[ext_resource type="PackedScene" uid="uid://6khn0gdnyxhx" path="res://scenes/components/health_component.tscn" id="3_2vbww"]
[ext_resource type="Texture2D" uid="uid://cdqoxgs7nmd7" path="res://assets/sprites/Ryömivä_vihollinen_proto.png" id="3_d7x8r"]
[ext_resource type="PackedScene" uid="uid://b4t21tkqu5tqc" path="res://scenes/components/hitbox_component.tscn" id="4_n5i5x"]
[ext_resource type="AudioStream" uid="uid://biqnjrjwrhatq" path="res://assets/sfx/Lentovihu kuollakupsahtaa 1.wav" id="7_mr73v"]
[ext_resource type="AudioStream" uid="uid://cr7k16y3743od" path="res://assets/sfx/Lentovihu kuollakupsahtaa 2.wav" id="8_i0ttj"]
[ext_resource type="AudioStream" uid="uid://dqubs4nr75u2d" path="res://assets/sfx/Lentovihu kuollakupsahtaa 3.wav" id="9_6mikm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hhh7"]
size = Vector2(42, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ekyw"]
resource_local_to_scene = true
shader = ExtResource("2_ri85n")
shader_parameter/flash_color = Color(0.827451, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_4boys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0933437, 0.0952969)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_iyltr"]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, 0.7, 0.0]
}

[sub_resource type="Animation" id="Animation_0ryhf"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.0933437, 0.0952969), Vector2(0.02, 0.02)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 5), Vector2(0, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hyt2k"]
_data = {
&"RESET": SubResource("Animation_4boys"),
&"damage": SubResource("Animation_iyltr"),
&"death": SubResource("Animation_0ryhf")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i7lpj"]
streams_count = 3
stream_0/stream = ExtResource("7_mr73v")
stream_1/stream = ExtResource("8_i0ttj")
stream_2/stream = ExtResource("9_6mikm")

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
script = ExtResource("1_8dv88")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.6)
shape = SubResource("RectangleShape2D_2hhh7")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_4ekyw")
position = Vector2(0, 5)
scale = Vector2(0.0933437, 0.0952969)
texture = ExtResource("3_d7x8r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_hyt2k")
}

[node name="Killzone" parent="." instance=ExtResource("2_jvvar")]
collision_layer = 0

[node name="Hurtbox" type="CollisionPolygon2D" parent="Killzone"]
polygon = PackedVector2Array(0, 19, 16, 19, 21, 11, 6, -5, -5, -5, -21, 11, -16, 19)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 11)
target_position = Vector2(22, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 11)
target_position = Vector2(-22, 0)

[node name="RayCastEdge" type="RayCast2D" parent="."]
position = Vector2(22, 6)
target_position = Vector2(0, 15)

[node name="HealthComponent" parent="." instance=ExtResource("3_2vbww")]
position = Vector2(-22.2901, 31.0113)

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_n5i5x")]
collision_layer = 4
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_2hhh7")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="DeathPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_i7lpj")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
